--- a/JAVA/불변객체란?.md
+++ b/JAVA/불변객체란?.md
@@ -26,9 +26,7 @@ str = str + "cd";
   - 객체에 대한 신뢰도가 높아진다. 객체가 한번 생성되고 변하지 않는다면 트랜잭션내에서 우리가 믿고 쓸 수 있기 때문이다
   - 생성자,접근메서드에 대한 방어 복사가 필요없다
   - 멀티스레드 환경에서 동기화 처리없이 객체를 공유할 수 있다(공유 자원이 불변이기 때문에 항상 동일한 값을 반환하기 때문) = Thread-safe하다
-  - 가비지 컬렉션(GC) 성능을 높일 수 있다 = 가비지 컬렉터가 스캔하는 객체의 수가 줄기 때문에 Gc 수행 시 지연시간도 줄어든다
-
-(가비지 컬렉터가 스캔하는 객체의 수가 줄기 때문에 Gc 수행 시 지연시간도 줄어든다.)
+  - 가비지 컬렉션(GC) 성능을 높일 수 있다 = 가비지 컬렉터가 스캔하는 객체의 수가 줄기 때문에 GC 수행 시 지연시간도 줄어든다
 - 단점
   - 생성할 때 초기값이 아닌, 새로운 값을 입력하려면 새 객체를 만들어야 한다 -> 그 만큼 자원의 소모가 많아지며,코드 재사용성이 떨어진다
 
