--- a/컴퓨터 구조/캐시 메모리.md
+++ b/컴퓨터 구조/캐시 메모리.md
@@ -7,7 +7,8 @@
 
 -   CPU와 메모리 사이에 위치한, 레지스터보다 용량이 크고 메모리보다 빠른 SRAM 기반의 저장장치
 -   CPU의 연산 속도와 메모리 접근 속도의 차이를 조금이나마 줄이기 위해 탄생
--   **"CPU가 매번 메모리에 왔다 갔다 하는 건 시간이 오래 걸리니, 메모리에서 CPU가 사용할 일부 데이터를 미리 캐시 메모리로 가지고 와서 쓰자"**메모리에 접근 = 물건을 사러 가는것  
+-   **"CPU가 매번 메모리에 왔다 갔다 하는 건 시간이 오래 걸리니, 메모리에서 CPU가 사용할 일부 데이터를 미리 캐시 메모리로 가지고 와서 쓰자"** 
+> 메모리에 접근 = 물건을 사러 가는것  
     메모리 = 물건은 많지만 집과는 멀리 떨어져 있어 왕복이 오래 걸리는 대형마트  
     캐시 메모리 = 물건이 많지는 않아도 집과 가까이 있는 편의점
 
@@ -18,9 +19,9 @@
 
 ## 참조 지역성 원리
 
-> 캐시 메모리는 메모리보다 용량이 작다  
+> _캐시 메모리는 메모리보다 용량이 작다  
 > 당연하게도 메모리의 모든 내용을 저장할 수 없다  
-> CPU가 자주 사용할 법한 내용을 예측하여 저장
+> CPU가 자주 사용할 법한 내용을 예측하여 저장_
 
 -   **캐시 히트** : 예측이 들어맞을 경우 (CPU가 캐시 메모리에 저장된 값을 활용할 경우)
 -   캐시 미스 : 예측이 틀렸을 경우 (CPU가 메모리에 접근해야 하는 경우)
