--- a/JPA/즉시 로딩과 지연 로딩.md
+++ b/JPA/즉시 로딩과 지연 로딩.md
@@ -2,7 +2,7 @@
 >근데, 만약 Member를 부르는 함수가 있다고 하면.. Team의 정보들까지 같이 가져오게 된다<br>
 >= 효율성이 좋지 않고 최적화가 되어있지 않다고 볼 수 있다
 
-위 문제를 **프록시,지연로딩**으로 해결할 수 있다
+위 문제를 [프록시](https://github.com/hongxeob/TIL/blob/main/JPA/%ED%94%84%EB%A1%9D%EC%8B%9C.md),**지연로딩**으로 해결할 수 있다
 ## 지연 로딩
 
 - fetch = FetchType.***LAZY***
