--- a/JPA/프록시.md
+++ b/JPA/프록시.md
@@ -2,7 +2,7 @@
 >근데, 만약 Member를 부르는 함수가 있다고 하면.. Team의 정보들까지 같이 가져오게 된다<br>
 >= 효율성이 좋지 않고 최적화가 되어있지 않다고 볼 수 있다
 
-위 문제를 **프록시,지연로딩**으로 해결할 수 있다
+위 문제를 **프록시**,[지연로딩](https://github.com/hongxeob/TIL/blob/main/JPA/%EC%A6%89%EC%8B%9C%20%EB%A1%9C%EB%94%A9%EA%B3%BC%20%EC%A7%80%EC%97%B0%20%EB%A1%9C%EB%94%A9.md)으로 해결할 수 있다
 
 # 1. 프록시
 
