--- a/JPA/즉시 로딩과 지연 로딩.md
+++ b/JPA/즉시 로딩과 지연 로딩.md
@@ -4,26 +4,19 @@
 
 위 문제를 [프록시](https://github.com/hongxeob/TIL/blob/main/JPA/%ED%94%84%EB%A1%9D%EC%8B%9C.md),**지연로딩**으로 해결할 수 있다
 ## 지연 로딩
-
-- fetch = FetchType.***LAZY***
+- `fetch = FetchType.LAZY`
     - ex) Member,Team 연관관계(N:1)에서 **실제 team을 사용하는 시점에 초기화(DB 조회)** 후 프록시로 Team의 정보를 가져온다
-
 ## 즉시 로딩
-
-- fetch = FetchType.***EAGER***
+- `fetch = FetchType.EAGER`
     - ex) Member조회시 항상 Team도 같이 조회
-
 ## 프록시와 즉시로딩 주의점
-
 - 가급적 지연 로딩만 사용
 - 즉시 로딩을 적용하면 예상하지 못한 SQL이 발생
 - **즉시 로딩은 JPQL에서 N+1 문제를 일으킨다**
 - `@ManyToOne`, `@OneToOne`은 디폴트가 즉시 로딩(EAGER)이다 → LAZY로 설정한다
 - `@OneToMany`, `@ManyToMany`는 디폴트가 지연 로딩
-
 ## 결론 !
-
-- 모든 연관관계에 지연 로딩을 사용해라
+- 모든 연관관계에 **지연 로딩**을 사용해라
 - 실무에서 즉시 로딩을 사용하지 마라
     - 즉시 로딩은 상상하지 못한 쿼리가 나간다
 - JPQL fetch 조인이나, `@EntityGraph` 기능을 사용해라
