[내용 수정]: Spring - 프레임워크란?

--- a/Spring/프레임워크란?.md
+++ b/Spring/프레임워크란?.md
@@ -6,7 +6,7 @@
     - Python의 Django
     - JS의 Node.js
 
-### 프레임워크의 장점
+## 프레임워크의 장점
 - **빠른 구현에 있어 효율적이다**
     - 아무것도 없는 백지상태에서 코드를 일일이 짜는 것보다, 시간과 비용이 훨씬 절약되며 생산성이 좋아진다
 - **퀄리티 향상(완성도)**
@@ -14,18 +14,18 @@
     - 또한 많은 개발자가 사용하며 수정하다 보니 이미 검증된 코드라고 볼 수 있다
 - **유지보수에 효과적**
     - 프레임워크를 쓰지않고 일일이 코드를 짜놓은 경우, 회사 입장에서 담당자가 바뀌어버리면 곤란하다. 그러나 프레임워크를 사용하면 코드가 보다 체계적이어서 담당자가 바뀌더라도 위험부담을 줄일 수 있고, 유지보수에 안정적이다
-### 프레임워크의 단점
+## 프레임워크의 단점
 - **학습 시간이 길어질 수 있다**
     - 코드를 본인이 짠게 아니기 때문에, 프레임워크에 있는 코드를 습득하고 이해하는데 오랜 시간이 걸린다
 - **제약 사항**
     - 프레임워크 제작자가 설계한 구조를 어느정도 유지한 채 코드에 살을 붙여나가야 한다. 그래서 사용하는 개발자는 자유롭고 유연하게 개발하는 데 한계가 있다
 
-### 그럼에도 프레임워크의 사용 이유?
+## 그럼에도 프레임워크의 사용 이유?
 > 결국 효율성 때문이다. <br>
 > 당연하게 처음부터 혼자 다 만드는것 보단 남이 만들어 놓은 것을 사용할 수 있다면, 사용하는게 보다 빠르고 성능도 좋기 떄문이다.<br>
 > 또한 회사 입장에서는 품질에 개인이 미치는 영향을 최소화하여 일정 품질을 보장할 수 있다!
 
-### 💡프레임워크 / 라이브러리의 차이?
+## 💡프레임워크 / 라이브러리의 차이?
 
 > 라이브러리 : 소프트웨어를 개발할 때 컴퓨터 프로그램이 사용하는 비휘발성 자원의 모임. 즉 특정 기능을 모아둔 코드,함수들의 집합이며 코드 작성시 활용 가능한 도구를 의미한다<br>
 > 쉽게 말해, 현실세계에서의 라이브러리(도서관)란 필요할 때마다 꺼내볼 수 있는 책(지식)들이 모여있는 곳이다.<br>\
