[오타 수정] - Spring

--- a/Spring/스프링 프레임워크란.md
+++ b/Spring/스프링 프레임워크란.md
@@ -1,6 +1,6 @@
 ## Spring Framework의 정의
 - Spring은 Java Enterprise Edition 애플리케이션 개발에 가장 널리 사용되는 프레임 워크
-    - 즉 자바 **엔터프라이즈 개발을 편하게** 해주는 **오픈소스** 경량급 애플리케이션 프레임워크
+    - 즉 **자바 엔터프라이즈 개발을 편하게** 해주는 **오픈소스** 경량급 애플리케이션 프레임워크
     - 보안, 트랜잭션과 같은 엔터프라이즈 개발에서 요구되는 기술에 신경쓰지 않고 비지니스 로직에만 집중할 수 있게 만든다는 의미이다
     - Spring의 핵심 기능은 모두 Java 애플리케이션 개발에 사용할 수 있다
 - 복잡하지 않고 **경량화** 된 **애플리케이션 프레임워크**
@@ -37,14 +37,14 @@
 
 - DI는 해당 개념을 구현하기 위해 사용하는 디자인 패턴 중 하나로, 이름 그대로 객체의 의존관계를 외부에서 주입시키는 패턴을 말한다
 - 스프링에서는 ‘ApplicationContext’라는 존재가 필요한 객체들을 생성하고, 필요한 객체들을 주입하는 역할을 해주는 구조이다
+  - ApplicationContext가 관리하는 객체들을 Bean이라고 칭하고, 빈과 빈 사이의 의존 관계를 처리하는 방식으로 XML,Annotation, Jave등 다양한 방식이 사용된다
 - 따라서 스프링을 사용하면 객체와 객체를 분리해서 생성하고, 이런 객체들을 엮는 작업을 하게된다(Wiring)
     - 각각의 계층이나 서비스들 간에 의존성이 존재할 경우 **프레임워크가 서로 연결**시켜 준다
-- ApplicationContext가 관리하는 객체들을 Bean이라고 칭하고, 빈과 빈 사이의 의존 관계를 처리하는 방식으로 XML,Annotation, Jave등 다양한 방식이 사용된다
 
 ### 5. **관점 지향 프로그래밍(AOP, Aspect-Oriented Programming)**
 
 - 관점 지향은 어떤 로직을 기준으로 **핵심적인 관점, 부가적인 관점** 으로 나누어서 보고 그 관점을 기준으로 모듈화 하겠다는 것이다
-- 트랜잭션이나 로깅,보안과 같이 여러 모듈에서 공통적으로 사용하는 기능의 경우 해당 기능을 분리하여 관리 할 수 있다
+- 트랜잭션이나 로깅,보안과 같이 **여러 모듈에서 공통적으로 사용**하는 기능의 경우 **해당 기능을 분리**하여 관리 할 수 있다
 - 중요한 부분과 덜 중요한 부분으로 나눠 관리할 수 있다
 
 ### 6. 트랜잭션의 지원
