--- a/Spring/프레임워크란?.md
+++ b/Spring/프레임워크란?.md
@@ -22,7 +22,7 @@
 
 ## 그럼에도 프레임워크의 사용 이유?
 > 결국 효율성 때문이다. <br>
-> 당연하게 처음부터 혼자 다 만드는것 보단 남이 만들어 놓은 것을 사용할 수 있다면, 사용하는게 보다 빠르고 성능도 좋기 떄문이다.<br>
+> 당연하게 처음부터 혼자 다 만드는것 보단 남이 만들어 놓은 것을 사용할 수 있다면, 그것을 사용하는 것이 보다 빠르고 좋은 성능을 낼 수 있기 때문이다<br>
 > 또한 회사 입장에서는 품질에 개인이 미치는 영향을 최소화하여 일정 품질을 보장할 수 있다!
 
 ## 💡프레임워크 / 라이브러리의 차이?
@@ -35,4 +35,4 @@
     - 단지 동작하는 중에 필요한 기능이 있을때 **능동적**으로 라이브러리를 사용할 뿐이다
 - 반면 프레임워크는 **거꾸로 애플리케이션 코드가 프레임워크에 의해 사용**된다
     - 프레임워크에는 분명한 **제어의 역전(IoC)** 개념이 적용되어 있어야 한다!
-- 애플리케이션 코드는 프레임워크가 짜 놓은 틀에서 **수동적**으로 동작해야 한다
+  - 애플리케이션 코드는 프레임워크가 짜 놓은 틀에서 **수동적**으로 동작해야 한다
