[오타 수정]: CS - 디자인패턴/프로그래밍패러다임

--- a/CS/디자인 패턴.md
+++ b/CS/디자인 패턴.md
@@ -30,7 +30,7 @@
     -   최초 한번의 new 연산자를 통해서 고정된 메모리 영역을 사용하기 때문에 추후 해당 객체에 접근할 때 메모리 낭비를 방지할 수 있다
     -   다른 클래스간 **데이터 공유**가 쉽다
 
-```
+```java
 public class Singleton {
     private static Singleton instance = new Singleton();
     
@@ -140,7 +140,7 @@ public class Singleton {
         -   즉시 실행 함수 : 함수를 정의 하자마자 바로 호출하는 함수. 초기화 코드, 라이브러리 내 전역 변수의 충돌 방지 등에 사용한다
     -   JavaScript는 언어 레벨에서 접근 제어자가 존재하지 않고, 전역 변위에서 스크립트가 실행된다
 
-```
+```javascript
 const rmp = (() => {
           const a = 1;
           const b = () => 2;
