--- a/CS/프로그래밍 패러다임.md
+++ b/CS/프로그래밍 패러다임.md
@@ -20,7 +20,7 @@
 
 예시 코드
 
-```
+```java
 public class Calc {
     public int getMax(List<int> nums) {
         int result = 0;
@@ -76,7 +76,7 @@ public class Calc {
 -   특정 개념을 구체화 시키지 않고 모호화 하는 것
 -   여러가지 사물/개념에서 공통되는 특성을 묶어 이름을 붙이는 것
 
-```
+```java
 public interface Vehicle {
   public void time();
 }
@@ -113,7 +113,7 @@ public class Ship implements Vehicle {
 -   부모(상위) 클래스의 특성을 자식(하위) 클래스가 이어받아서 재사용하거나 추가, 확장하는 것을 말한다
 -   코드의 재사용 측면, 계층적인 관계 생성, 유지 보수성 측면에서 중요하다
 
-```
+```java
 public  class Vehicle{
 
     private String door;
@@ -145,7 +145,7 @@ public class Car extends Vehicle{
 -   같은 이름의 메서드(함수)를 여러개 가지면서 매개변수 유형과 개수가 다르도록 하는 것
 -   한 클래스내에서 유사하지만 기능은 다르고, 이름이 같은 메소드를 여러개 정의하는 것
 
-```
+```java
 class Person {
     public void eat(String a) {
         System.out.println("I eat " + a);
@@ -173,7 +173,7 @@ I eat tomato and phodo
 
 -   부모(상위) 클래스가 가지고 있는 메소드를 자식(하위) 클래스가 상속받아 재정의해서 사용
 
-```
+```java
 class Animal {
 
     public void bark() {
