--- a/CS/디자인 패턴.md
+++ b/CS/디자인 패턴.md
@@ -192,8 +192,7 @@ const rmp = (() => {
 
 > Repository, Service는 무엇인가?  
 > 위처럼 MVC 패턴을 이용하면 비즈니스 로직과 뷰는 분리가 된다  
-> 하지만, Controller에서는 HTTP 연결을 담당하는 컨트롤러 로직이 있기 때문에  
-> 컨트롤러가 너무 많은 일을 담당하게 된다.  
+> 하지만, Controller에서는 HTTP 연결을 담당하는 컨트롤러 로직이 있기 때문에 컨트롤러가 너무 많은 일을 담당하게 된다.  
 > 위 문제점 때문에 Service, Repository 계층을 따로 만들어서 Controller는 컨트롤러 로직에만 집중할 수 있게한다.  
 > 그렇게 분리된 Repository, Service , DTO ,DAO 등은 사실상 Controller 레이어에 속한다!
 
