[오타 수정]: Spring - 레이어드 아키텍처

--- a/Spring/레이어드 아키텍처.md
+++ b/Spring/레이어드 아키텍처.md
@@ -49,7 +49,9 @@
 ## 왜 이렇게 나누는 걸까?
 
 >이것은 `관심사의 분리`와 연관이 있다
+>- 각각의 영역이 담당하는 역할과 책임을 기준으로 만든다는 것이다.
 >- 예를 들어 비즈니스 레이어는 데이터를 어떻게 받아야 하는지, 화면에 어떻게 보여줄지 전혀 관여하지 않는다
+>- 역할과 책임을 기준으로 레이어를 나누고 각 레이어별로 어떠한 인터페이스를 가지고 데이터를 주고 받을 것인지를 결정하여, **레이어별로 해당 역할과 책임에 대해서만 전념**할 수 있도록 하는 것이다
 >- 따라서 **기술적인 부분에만 집중**할 수 있지만, 변화에 반응하는 능력(민첩성)은 떨어진다는 단점이 있다
 
 ## 레이어드 아키텍처의 핵심 요소
