--- a/Spring/트랜잭션 동기화 매니저.md
+++ b/Spring/트랜잭션 동기화 매니저.md
@@ -5,7 +5,7 @@
 ## 리소스 동기화
 - 트랜잭션을 유지하려면 트랜잭션의 시작부터 끝까지 **같은 DB 커넥션을 유지**해야한다.
 - 결국 같은 커넥션을 동기화하기 위해서 이전에는 파라미터로 커넥션을 전달하는 방법을 사용했다.
-- 파라미터로 커넥션을 전달하는 방법은 코드가 지저분해지는 것은 물론이고, 커넥션을 넘기는 메서드와 넘기지 안흔 메서드를 중복해서 만들어야 하는 등 여러가지 단점들이 많다.
+- 파라미터로 커넥션을 전달하는 방법은 코드가 지저분해지는 것은 물론이고, 커넥션을 넘기는 메서드와 넘기지 않은 메서드를 중복해서 만들어야 하는 등 여러가지 단점들이 많다.
 
 ## 트랜잭션 동기화 매니저
 
