--- a/Spring/스프링 배치.md
+++ b/Spring/스프링 배치.md
@@ -11,7 +11,7 @@
 - 대용량 데이터의 포맷을 변경, 유효성 검사 등의 작업을 트랜잭션 안에서 처리 후 기록해야 하는 경우
 
 >Spring Batch는 로깅/추적, 트랜잭션 관리, 작업 처리 통계, 작업 재시작, 건너뛰기, 리소스 관리 등 대용량 레코드 처리에 필수적인 재사용 가능한 기능을 제공한다.<br>
-또한 최적화 및 파티셔닝 기술을 통해 대용량 및 고성능 일괄 적읍을 가능하게 하는 고급 기술 서비스 및 기능을 제공한다.
+또한 최적화 및 파티셔닝 기술을 통해 대용량 및 고성능 일괄 작업을 가능하게 하는 고급 기술 서비스 및 기능을 제공한다.
 
 ## 배치 애플리케이션의 조건
 
