[내용 추가] : Spring - 싱글톤

--- a/CS/디자인 패턴.md
+++ b/CS/디자인 패턴.md
@@ -32,7 +32,7 @@
 
 ```java
 public class Singleton {
-    private static Singleton instance = new Singleton();
+    private static final Singleton instance = new Singleton();
     
     private Singleton() {
         // 생성자는 외부에서 호출못하게 private 으로 지정해야 한다.
